error.log
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "C:\projects\texttovideo\pythonProject\.venv\Scripts\manim.exe\__main__.py", line 7, in <module>
  File "C:\projects\texttovideo\pythonProject\.venv\Lib\site-packages\click\core.py", line 1161, in __call__
    return self.main(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\projects\texttovideo\pythonProject\.venv\Lib\site-packages\click\core.py", line 1082, in main
    rv = self.invoke(ctx)
         ^^^^^^^^^^^^^^^^
  File "C:\projects\texttovideo\pythonProject\.venv\Lib\site-packages\click\core.py", line 1697, in invoke
    return _process_result(sub_ctx.command.invoke(sub_ctx))
                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\projects\texttovideo\pythonProject\.venv\Lib\site-packages\click\core.py", line 1443, in invoke
    return ctx.invoke(self.callback, **ctx.params)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\projects\texttovideo\pythonProject\.venv\Lib\site-packages\click\core.py", line 788, in invoke
    return __callback(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\projects\texttovideo\pythonProject\.venv\Lib\site-packages\manim\cli\render\commands.py", line 121, in render
    for SceneClass in scene_classes_from_file(file):
                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "C:\projects\texttovideo\pythonProject\.venv\Lib\site-packages\manim\utils\module_ops.py", line 167, in scene_classes_from_file
    module = get_module(file_path)
             ^^^^^^^^^^^^^^^^^^^^^
  File "C:\projects\texttovideo\pythonProject\.venv\Lib\site-packages\manim\utils\module_ops.py", line 67, in get_module
    spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "C:\projects\texttovideo\pythonProject\generate_solution.py", line 1
    ```python
    ^
SyntaxError: invalid syntax
